--- a/css/style.css
+++ b/css/style.css
@@ -1713,7 +1713,8 @@ textarea.form-control {
   height: auto; }
 
 .form-group {
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem; 
+ border-radius: 5rem;}
 
 .form-text {
   display: block;
@@ -8147,7 +8148,7 @@ a.text-dark:hover, a.text-dark:focus {
 body {
   font-family: "Lato", Arial, sans-serif;
   font-size: 16px;
-  line-height: 1.8;
+  line-height: 1;
   font-weight: normal;
   color: gray;
   position: relative;
@@ -8334,6 +8335,7 @@ textarea.form-control {
     color: #fbceb5; }
 
 .btn {
+  background: #ffffff54 !important;
   cursor: pointer;
   border-radius: 40px;
   -webkit-box-shadow: none !important;
@@ -8376,5 +8378,5 @@ textarea.form-control {
  }
  .navbarlinka
  {
-  color: #000 !important;
+  color: #000 !;
  }
